[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"
members = [
    "Concurrency" # Name of the subproject directory
]

[dependencies]
bitvec = "1.0"
memoffset = "0.6.5"
spin = "0.9.8"  # or the latest version
libc = "0.2.155"  # Use the latest version available
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
